[project]
name = "theseptaapi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "dotzenith", email = "contact@danshu.co" }
]
dependencies = [
    "fastapi[standard]>=0.112.1",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "black>=24.8.0",
]

[tool.black]
line-length = 100

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/theseptaapi"]
