[project]
name = "theseptaapi"
version = "0.1.0"
description = "Endpoints to augment septa's public API"
authors = [
    { name = "dotzenith", email = "contact@danshu.co" }
]
dependencies = [
    "fastapi[standard]>=0.112.1",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "black>=24.8.0",
]

[tool.black]
line-length = 100
