[project]
name = "septum"
version = "0.2.3"
description = "Endpoints to augment septa's public API"
authors = [
    { name = "dotzenith", email = "contact@danshu.co" }
]
dependencies = [
    "fastapi[standard]>=0.112.1",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
    "fastapi-cache2[redis]>=0.2.2",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "black>=24.8.0",
]

[tool.black]
line-length = 100
